--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,7 @@ python-decouple==3.8
 requests==2.32.5
 Pillow==10.4.0
 gunicorn==21.2.0
-dj-database-url==2.1.0
-psycopg2-binary==2.9.9
 whitenoise==6.6.0
 pandas==2.2.0
 matplotlib==3.8.0
-psycopg2-binary
+mysqlclient==2.2.0
